--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
     </span>
   </a>
 </template>
-<script src="js/pictures.js"></script>
+<script src="js/data.js"></script>
+<script src="js/gallery.js"></script>
+<script src="js/preview.js"></script>
+<script src="js/form.js"></script>
 </body>
 
