--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
     </span>
   </a>
 </template>
+<script src="js/util.js"></script>
 <script src="js/data.js"></script>
 <script src="js/gallery.js"></script>
 <script src="js/preview.js"></script>
