Исправлены замечания, доработана форма загрузки изображений

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 <script src="js/backend.js"></script>
 <script src="js/picture.js"></script>
 <script src="js/gallery.js"></script>
+<script src="js/file-reader.js"></script>
 <script src="js/preview.js"></script>
 <script src="js/filter.js"></script>
 <script src="js/form.js"></script>
