Оптимизация файла form.js

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div class="upload-form-preview">
           <div></div>
-          <img src="img/upload-default-image.jpg" class="effect-image-preview">
+          <img class="effect-image-preview">
         </div>
 
         <fieldset class="upload-effect-controls">
